@@ -273,7 +273,7 @@ struct HhbcTranslator {
                       int32_t funcId,
                       int32_t fallbackFuncId);
   void emitFPushFunc(int32_t numParams);
-  void emitFPushFunc(int32_t numParams, SSATmp* funcName);
+  void emitFPushFuncObj(int32_t numParams);
   SSATmp* genClsMethodCtx(const Func* callee, const Class* cls);
   void emitFPushClsMethodD(int32_t numParams,
                            int32_t methodNameStrId,
